--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,3 +1,9 @@
+<div class="display-inline-block card card-rounded bg-info px-3 mt-2 mx-2">
+  <h1>The Tech Blog</h1>
+</div>
+</header>
+<main class="container container-fluid mt-5">
+  
 <div class="row">
   <div class="col-md-6">
     <h2>Login</h2>
