added functionality for commenting on posts

--- a/views/newpost.handlebars
+++ b/views/newpost.handlebars
@@ -9,7 +9,7 @@
     <card>
     <card-header><h3>Create a New Post:</h3></card-header>
 
-    <form class="form new-project-form">
+    <form class="form new-post-form">
       <div class="form-group">
         <label for="post-title">Title:</label>
         <input class="form-input" type="text" id="post-title" name="post-title" />
