--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -6,16 +6,18 @@
 
   {{#if posts.length}}
   <div class="col-md-6 post-list">
-    <h3>Current Projects:</h3>
 
     {{#each posts as |post|}}
-    <div class="row mb-2">
-      <div class="col-md-8">
+    <div class="row post bg-dark">
+      <div>
         <h4><a href="/project/{{post.id}}">{{post.title}}</a></h4>
       </div>
-      <div class="col-md-4">
-        <button class="btn btn-sm btn-danger" data-id="{{post.id}}">DELETE</button>
+      <div class="col">
+        <p>posted on: {{format_date post.date_created}}</p>
       </div>
+    </div>
+    <div>
+      <button class="btn btn-sm btn-danger" data-id="{{post.id}}">DELETE</button>
     </div>
     {{/each}}
   </div>
