--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -5,18 +5,19 @@
 </header>
 <main class="container container-fluid mt-5">
 {{#each posts as |post| }}
-<div class="row mb-4 post">
-  <div class="col-md-5">
-    <h2>
-      <!-- Call helper function with triple brackets to render the emoji span as HTML -->
-      <a href="/project/{{post.id}}">{{post.title}}</a>
+<div class="card mb-4 post">
+  <div class="card-header bg-dark">
+    <h2 class="mx-3">
+      <a href="/post/{{post.id}}">{{post.title}}</a>
     </h2>
-    <p>Created by {{post.user.name}} on {{format_date post.date_created}}</p>
   </div>
-  <div class="col-md-7">
+  <div class="card-body text-justify m-1 mx-3">
     <p>
       {{post.content}}
     </p>
+  </div>
+  <div class="card-footer">
+    Posted by {{post.user.name}} on {{format_date post.date_created}}
   </div>
 </div>
 {{/each}}
