--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,8 +1,44 @@
-<div class="text-center">
-  <h2>{{title}}</h2>
-  <p>{{content}}</p>
-  <p>Created by {{user.name}} on {{format_date date_created}}</p>
-  <p>
-    <button class="btn btn-primary">Fund this Project!</button>
-  </p>
+<div class="display-inline-block card card-rounded bg-info px-3 mt-2 mx-2">
+  <h1>The Tech Blog</h1>
 </div>
+</header>
+<main class="container container-fluid mt-5">
+
+<div class="card mb-4 post">
+  <div class="card-header bg-dark text-light">
+    <h2 class="mx-3">
+      {{title}}
+    </h2>
+  </div>
+  <div class="card-body text-justify m-1 mx-3">
+    <p>
+      {{content}}
+    </p>
+  </div>
+  <div class="card-footer">
+    Posted by {{user.name}} on {{format_date date_created}}
+  </div>
+</div>
+
+{{#each comments as |comment|}}
+<div class="comment">
+  <div class="col-md-5 card">
+    <div class="card-header bg-dark mx-3">
+      {{comment.user.name}} commented:
+    </div>
+    <div class="card-body">
+      <p>
+        {{comment.content}}
+      </p>
+    </div>
+    <div class="card-footer">
+      Posted on {{format_date date_created}}
+    </div>
+  </div>
+</div>
+{{/each}}
+
+<button>Add Comment</button>
+
+<script src="./js/post.js"></script>
+
