--- a/public/css/jass.css
+++ b/public/css/jass.css
@@ -948,6 +948,10 @@ a:hover {
   background-color: #1b89bc !important;
 }
 
+.bg-secondary {
+  background-color: #5f5f5f !important;
+}
+
 /* DISPLAY */
 .display-none {
   display: none !important;
