--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -4,24 +4,24 @@
 </header>
 <main class="container container-fluid mt-5">
 
+<div class="display-flex flex-column">
   {{#if posts.length}}
   <div class="col-md-6 post-list">
-
     {{#each posts as |post|}}
-    <div class="row post bg-dark">
+    <div class="row post bg-light mb-4 justify-space-between">
       <div>
-        <h4><a href="/project/{{post.id}}">{{post.title}}</a></h4>
+        <h4><a href="/post/{{post.id}}">{{post.title}}</a></h4>
       </div>
       <div class="col">
         <p>posted on: {{format_date post.date_created}}</p>
       </div>
-    </div>
-    <div>
-      <button class="btn btn-sm btn-danger" data-id="{{post.id}}">DELETE</button>
+      <button class="btn btn-sm btn-danger delete-post" data-id="{{post.id}}">DELETE</button>
     </div>
     {{/each}}
   </div>
   {{/if}}
+<div class="row">
+  <a class="btn btn-lg btn-info new-post" href="/newpost">+ New Post</a>
 </div>
-
-<script src="./js/profile.js"></script>
+</div>
+<script src="/js/profile.js"></script>
