--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -22,11 +22,11 @@
 
 {{#each comments as |comment|}}
 <div class="comment">
-  <div class="col-md-5 card">
-    <div class="card-header bg-dark mx-3">
-      {{comment.user.name}} commented:
+  <div class="mb-4 card">
+    <div class="card-header bg-dark">
+      <div class="px-2">{{comment.user.name}} commented:</div>
     </div>
-    <div class="card-body">
+    <div class="card-body text-justify m-1 mx-3">
       <p>
         {{comment.content}}
       </p>
@@ -38,7 +38,32 @@
 </div>
 {{/each}}
 
-<button>Add Comment</button>
+{{!-- <div class="add-comment">
+  <button >Add Comment</button>
+</div> --}}
 
-<script src="./js/post.js"></script>
+{{#if logged_in}}
+<div class="card" id="comment-box">
+  <div class="card-header bg-dark">
+    <h5 class="mx-3">Add your comment</h5>
+  </div>
+  <div class="px-3">
+    <form class="form new-comment-form">
+      <div class="form-group">
+        <textarea class="form-input" id="comment-content" name="comment-content"></textarea>
+      </div>
+      <div class="form-group">
+        <button type="submit" class="btn btn-primary">Post Comment</button>
+      </div>
+    </form>
+  </div>
+</div>
+{{else}}
+<div class="card">
+  <div class="card-header bg-secondary">
+    <h5 class="px-2">Login to leave a comment</h5>
+  </div>
+</div>
+{{/if}}
+<script src="/js/thread.js"></script>
 
